--- a/css/style.css
+++ b/css/style.css
@@ -13,21 +13,74 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
+  position: relative;
   background-color: #2c2141;
   font-family: Helvetica, Arial, sans-serif;
+  background: #fff;
+  overflow: hidden;
+}
+
+.svg-navy {
+  position: absolute;
+  width: 95%;
+  top: -300px;
+  left: -370px;
+  z-index: 1;
+  opacity: 0.9;
+}
+
+.svg-pink {
+  position: absolute;
+  width: 80%;
+  top: 0;
+  left: -400px;
+  opacity: 0.9;
+  z-index: 2;
+}
+
+.svg-pink2 {
+  position: absolute;
+  width: 100%;
+  bottom: -100;
+  left: 480px;
+  opacity: 0.9;
+  z-index: 2;
+}
+
+.svg-orange {
+  position: absolute;
+  width: 70%;
+  top: 220px;
+  left: 300px;
+  opacity: 0.9;
+  z-index: 2;
 }
 
 .main {
-  width: 624px;
+  position: relative;
+  width: 720px;
   margin: 16px;
   background-color: #f8f8f8;
-  padding: 32px;
-  border-radius: 16px;
+  /* border-radius: 32px; */
 }
 
 .card {
+  padding: 64px;
   display: flex;
   align-items: flex-start;
+}
+
+.card::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  /* border-radius: 32px; */
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+  z-index: 2;
 }
 
 .card__image {
@@ -36,6 +89,7 @@ body {
   height: 148px;
   border-radius: 50%;
   margin-right: 32px;
+  z-index: 2;
 }
 
 .card__info {
