--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body {
   position: relative;
   background-color: #2c2141;
   font-family: Helvetica, Arial, sans-serif;
-  background: #fff;
+  background: #fcf0f0;
   overflow: hidden;
 }
 
@@ -34,7 +34,7 @@ body {
   width: 80%;
   top: 0;
   left: -400px;
-  opacity: 0.9;
+  opacity: 0.7;
   z-index: 2;
 }
 
@@ -60,7 +60,7 @@ body {
   position: relative;
   width: 720px;
   margin: 16px;
-  background-color: #f8f8f8;
+  background-color: rgb(255, 246, 246);
   /* border-radius: 32px; */
 }
 
