--- a/css/style.css
+++ b/css/style.css
@@ -14,10 +14,9 @@ body {
   align-items: center;
   height: 100vh;
   position: relative;
-  background-color: #2c2141;
-  font-family: Helvetica, Arial, sans-serif;
-  background: #fcf0f0;
   overflow: hidden;
+  background: #fcf0f0;
+  font-family: "Dosis", Helvetica, Arial, sans-serif;
 }
 
 .svg-navy {
