--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,24 @@ body {
   color: #ed6d05;
 }
 
-.card__link {
-  color: #e20613;
+.media {
+  display: flex;
+}
+
+.media__link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 2rem;
+  height: 2rem;
+  margin: 24px 15px 10px 0;
+  border-radius: 50%;
+  background-color: #a5ad9f;
   text-decoration: none;
+  z-index: 7;
+}
+
+.media__link__icon {
+  color: #fff;
+  font-size: 16px;
 }
