Adjust title & position color and font size

--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ body {
   width: 95%;
   position: absolute;
   top: -300px;
-  left: -380px;
+  left: -390px;
   z-index: 1;
 }
 
@@ -110,17 +110,16 @@ body {
 
 .card__name {
   margin: 0;
-  font-size: 36px;
-  line-height: 41px;
-  font-weight: bold;
-  color: #a5ad9f;
+  font-size: 42px;
+  font-weight: 400;
+  color: #666;
 }
 
 .card__position {
   margin: 0;
   font-size: 18px;
   font-style: italic;
-  color: #d1a19f;
+  color: #a5ad9f;
 }
 
 .card__description {
