Minor card adjustments: font size, weight, padding

--- a/css/style.css
+++ b/css/style.css
@@ -103,13 +103,13 @@ body {
   flex-shrink: 0;
   width: 148px;
   height: 148px;
-  border-radius: 50%;
   margin-right: 56px;
+  border-radius: 50%;
   opacity: 0.9;
   z-index: 2;
 }
 
-.card__info {
+.card__header {
   margin-bottom: 16px;
 }
 
@@ -124,15 +124,15 @@ body {
   margin: 0;
   font-size: 18px;
   line-height: 24px;
-  font-style: italic;
-  color: #a5ad9f;
+  font-weight: 500;
+  color: #d7b9bb;
 }
 
 .card__description {
   margin: 0;
-  padding-top: 5px;
+  padding-top: 10px;
   font-size: 15px;
-  line-height: 22px;
+  line-height: 20px;
   font-weight: 400;
 }
 
