--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
   height: 100vh;
   position: relative;
   overflow: hidden;
-  background: #fcf2f2;
+  background: #fff8f8;
   font-family: "Dosis", Helvetica, Arial, sans-serif;
 }
 
@@ -117,7 +117,7 @@ body {
   margin: 0;
   font-size: 42px;
   font-weight: 400;
-  color: #213d5c;
+  color: #2c496b;
 }
 
 .card__position {
@@ -125,13 +125,13 @@ body {
   font-size: 18px;
   line-height: 24px;
   font-weight: 500;
-  color: #d7b9bb;
+  color: #a5ad9f;
 }
 
 .card__description {
   margin: 0;
   padding-top: 10px;
-  font-size: 15px;
+  font-size: 16px;
   line-height: 20px;
   font-weight: 400;
 }
@@ -158,7 +158,7 @@ body {
   height: 2rem;
   margin: 30px 15px 10px 0;
   border-radius: 50%;
-  background-color: #213d5c;
+  background-color: #2c496b;
   text-decoration: none;
   z-index: 6;
 }
@@ -171,7 +171,7 @@ body {
   width: 2rem;
   height: 2rem;
   border-radius: 50%;
-  background: #213d5c;
+  background: #2c496b;
 }
 
 .card__media__link:hover::before {
