--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,7 @@ body {
   width: 100%;
   height: 100%;
   background-color: transparent;
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+  animation: createShadow 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
   z-index: 5;
 }
 
@@ -195,4 +195,15 @@ body {
   color: #fff;
   font-size: 16px;
   z-index: 7;
+}
+
+@keyframes createShadow {
+  0% {
+    -webkit-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+  }
+  100% {
+    -webkit-box-shadow: 0 0 15px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 15px 0px rgba(0, 0, 0, 0.2);
+  }
 }
